[tool.poetry]
name = "oid4vci-client"
version = "0.1.0"
description = "Minimal OpenID4VCI Client"
authors = ["Daniel Bluhm <dbluhm@pm.me>"]
license = "Apache-2.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.5"
pytest-asyncio = "^1.1.0"
requests = "^2.32.0"
aries-askar = "^0.3.0"
did-peer-4 = "^0.1.4"
aiohttp = "^3.9.5"
acapy-controller = {git = "https://github.com/indicio-tech/acapy-minimal-example.git", python = ">=3.10,<4.0"}
jsonrpc-api-proxy-client = {git = "https://github.com/Indicio-tech/json-rpc-api-proxy.git", rev = "main", subdirectory = "clients/python"}
pydantic = "~2.7.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
ruff = "^0.13.0"

[tool.pytest.ini_options]
addopts = "-m 'not interop'"
markers = """
interop: interop testing
"""

[build-system]
requires = ["poetry-core>=2.1"]
build-backend = "poetry.core.masonry.api"

