[tool.poetry]
name = "oid4vci-client"
version = "0.1.0"
description = "Minimal OpenID4VCI Client"
authors = ["Daniel Bluhm <dbluhm@pm.me>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.4.0"
pytest-asyncio = "^0.23.5"
requests = "^2.31.0"
aries-askar = "^0.3.0"
did-peer-4 = "^0.1.4"
aiohttp = "^3.9.2"
acapy-controller = {git = "https://github.com/indicio-tech/acapy-minimal-example.git", python = ">=3.10,<4.0"}
pydantic = {version = "^1.10.2"}

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
ruff = "^0.1.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

