[tool.poetry]
name = "oid4vci-client"
version = "0.1.0"
description = "Minimal OpenID4VCI Client"
authors = ["Daniel Bluhm <dbluhm@pm.me>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^8.2.0"
pytest-asyncio = "~0.23.7"
requests = "^2.31.0"
aries-askar = "^0.3.0"
did-peer-4 = "^0.1.4"
aiohttp = "^3.9.5"
acapy-controller = {git = "https://github.com/indicio-tech/acapy-minimal-example.git", python = ">=3.10,<4.0"}
pydantic = "^1.10.15"
jsonrpc-api-proxy-client = {git = "https://github.com/Indicio-tech/json-rpc-api-proxy.git", rev = "main", subdirectory = "clients/python"}

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
ruff = "^0.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

