[tool.poetry]
name = "redis_events-tests"
version = "0.1.0"
description = ""
authors = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.5"
pytest-asyncio = "^1.1.0"
requests = "^2.32.0"
aiohttp = "^3.11.18"
fastapi-slim = "^0.115.14"
nest-asyncio = "^1.5.5"
redis = "^5.1.1"
uvicorn = "^0.35.0"
pydantic = "2.11.7"

[tool.poetry.group.dev.dependencies]

[tool.pytest.ini_options]

[build-system]
requires = ["poetry-core>=2.1"]
build-backend = "poetry.core.masonry.api"

